engine/baml-lib/ir_hasher/tests/integration/snapshots/lib__integration__snapshot_tests__snapshot_simple_class.snap
---
source: baml-lib/ir_hasher/tests/integration/snapshot_tests.rs
expression: snapshot_data
---
- name: Person
  type: Class
  interface_hash: 9969067028187165734
  implementation_hash: 12092320836688988574
  dependencies: []
