engine/baml-lib/ir_hasher/tests/integration/snapshots/lib__integration__snapshot_tests__snapshot_simple_enum.snap
---
source: baml-lib/ir_hasher/tests/integration/snapshot_tests.rs
expression: snapshot_data
---
- name: Color
  type: Enum
  interface_hash: 11765910584240855478
  implementation_hash: 8246727833787932183
  dependencies: []
