engine/baml-lib/ir_hasher/tests/integration/snapshots/lib__integration__snapshot_tests__snapshot_union_types_extended.snap
---
source: baml-lib/ir_hasher/tests/integration/snapshot_tests.rs
expression: snapshot_data
---
- name: TestComplexUnions
  type: Function
  interface_hash: 14952822035905193301
  implementation_hash: 1245872325855011807
  dependencies:
    - Admin
    - ComplexUnions
    - DataResponse
    - Error
    - ErrorResponse
    - Product
    - Result
    - Success
    - User
    - Warning
- name: TestDiscriminatedUnions
  type: Function
  interface_hash: 2089281766011971823
  implementation_hash: 18342216751580381489
  dependencies:
    - ApiError
    - ApiPending
    - ApiSuccess
    - Bird
    - Cat
    - Circle
    - DiscriminatedUnions
    - Dog
    - Rectangle
    - Triangle
- name: TestPrimitiveUnions
  type: Function
  interface_hash: 9276697990417687362
  implementation_hash: 10591895772133784119
  dependencies:
    - PrimitiveUnions
- name: TestUnionArrays
  type: Function
  interface_hash: 11240259989808586250
  implementation_hash: 168691490906195497
  dependencies:
    - Product
    - UnionArrays
    - User
- name: Admin
  type: Class
  interface_hash: 5075639876975244042
  implementation_hash: 3697950531438794874
  dependencies: []
- name: ApiError
  type: Class
  interface_hash: 1385388627029501120
  implementation_hash: 15319295372338867667
  dependencies: []
- name: ApiPending
  type: Class
  interface_hash: 8610931403799643124
  implementation_hash: 3794693550418876445
  dependencies: []
- name: ApiSuccess
  type: Class
  interface_hash: 13734326530091014133
  implementation_hash: 5133777435092432514
  dependencies: []
- name: Bird
  type: Class
  interface_hash: 10625262810602758839
  implementation_hash: 12388185949177983105
  dependencies: []
- name: Cat
  type: Class
  interface_hash: 11673807611653145030
  implementation_hash: 16775385764634511922
  dependencies: []
- name: Circle
  type: Class
  interface_hash: 12948625920773095428
  implementation_hash: 13169046458153667212
  dependencies: []
- name: ComplexUnions
  type: Class
  interface_hash: 2312106857461929024
  implementation_hash: 9461860054228553398
  dependencies:
    - Admin
    - DataResponse
    - Error
    - ErrorResponse
    - Product
    - Result
    - Success
    - User
    - Warning
- name: DataResponse
  type: Class
  interface_hash: 11918229633646062098
  implementation_hash: 17719631742391054570
  dependencies: []
- name: DiscriminatedUnions
  type: Class
  interface_hash: 17042773108473170013
  implementation_hash: 8529902466944772517
  dependencies:
    - ApiError
    - ApiPending
    - ApiSuccess
    - Bird
    - Cat
    - Circle
    - Dog
    - Rectangle
    - Triangle
- name: Dog
  type: Class
  interface_hash: 7013847471650600048
  implementation_hash: 17198926267693832396
  dependencies: []
- name: Error
  type: Class
  interface_hash: 14049028888912236574
  implementation_hash: 16966273499245495198
  dependencies: []
- name: ErrorResponse
  type: Class
  interface_hash: 3320661718066422531
  implementation_hash: 13950617889196103335
  dependencies: []
- name: PrimitiveUnions
  type: Class
  interface_hash: 14839041024911964834
  implementation_hash: 9842475131377433350
  dependencies: []
- name: Product
  type: Class
  interface_hash: 16784393432977131677
  implementation_hash: 12724280827586146009
  dependencies: []
- name: Rectangle
  type: Class
  interface_hash: 16959516841988017305
  implementation_hash: 2503664412761405900
  dependencies: []
- name: RecursiveUnion
  type: Class
  interface_hash: 15513296362690728675
  implementation_hash: 2043918068909657016
  dependencies:
    - RecursiveUnion
- name: Result
  type: Class
  interface_hash: 9866319800021757136
  implementation_hash: 7324548784762173676
  dependencies: []
- name: Success
  type: Class
  interface_hash: 2705622522007865390
  implementation_hash: 4265961293500482846
  dependencies: []
- name: Triangle
  type: Class
  interface_hash: 3491478636533733509
  implementation_hash: 12788108217995500017
  dependencies: []
- name: UnionArrays
  type: Class
  interface_hash: 523883059344654642
  implementation_hash: 15571077681111459410
  dependencies:
    - Product
    - User
- name: User
  type: Class
  interface_hash: 1491264952314142340
  implementation_hash: 3182884176756483688
  dependencies: []
- name: Warning
  type: Class
  interface_hash: 259307532870287692
  implementation_hash: 4531178319059931007
  dependencies: []
